fix checkout spacing

--- a/components/ShippingInformation/ShippingInformation.module.css
+++ b/components/ShippingInformation/ShippingInformation.module.css
@@ -27,8 +27,8 @@
 .formWrapper {
   width: 100%;
   
-margin-bottom: 50px;
-  padding: 0px 0px;
+margin: 20px 0px;
+  padding: 20px 0px;
 
 }
 .formGroup {
@@ -38,11 +38,12 @@ margin-bottom: 50px;
 .formGroup label {
   display: block;
   margin-bottom: 5px;
+  font-size: 14px;
 }
 .formGroup input {
   border: none;
-  border-bottom: 1px solid gray;
-  background-color: rgba(255, 255, 255, 0.139);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.073);
+  background-color:rgba(255, 255, 255, 0.085);
   width: 100%;
   height: 50px;
 }
