--- a/styles/Cart.module.css
+++ b/styles/Cart.module.css
@@ -3,23 +3,45 @@
   flex-direction: row;
   justify-content: space-evenly;
   align-items: flex-start;
-  margin: 50px 200px ;
+  margin: 50px 200px;
 }
 
 .cart-container .checkout {
-  /* display: flex; */
-  /* flex-direction: row;
-  justify-content: space-evenly; */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
 }
 
-.steps-wrapper{
+.steps-wrapper {
   flex: 2;
   min-width: 600px;
+  /* background-color: rgba(255, 255, 255, 0.204); */
+  padding: 0px 30px;
+  min-height: 60vh;
 }
+
 .title-edit-link_wrapper {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+
 }
+
+.title-edit-link_wrapper h2 {
+  padding: 20px ;
+  margin-bottom: 20px;
+  font-size: 2.4rem;
+}
+
+.checkout .title-edit-link_wrapper h2{
+  font-size: 1.8rem;
+}
+
+.checkout .title-edit-link_wrapper {
+  border-bottom: 1px solid gray;
+
+}
+
 .edit-link-wrapper {
   color: black;
   display: flex;
@@ -50,9 +72,9 @@
   font-family: "Oswald", sans-serif;
   font-size: 4rem;
   font-weight: 500;
-    
-  margin:100px 200px;
-  padding: 20px;
+   
+  margin: 50px  0px   50px 200px; 
+
 }
 
 .account-sign-in {
@@ -61,7 +83,7 @@
 }
 
 .cart-container h2 {
-  font-size: 2rem;
+  font-size: 2.5rem;
   margin-top: 0;
   font-family: "Oswald", sans-serif;
 }
@@ -83,6 +105,7 @@
   background-color: rgba(251, 251, 251, 0.278);
   width: 100%;
   display: flex;
+  flex-direction: row;
   margin: 10px 0;
 }
 
@@ -171,27 +194,17 @@
   min-width: 500px;
   max-width: 550px;
   min-height: 60vh;
-
+  display: flex;
+  flex-direction: column;
   padding: 30px;
   margin: 0 100px;
-
 }
 
 .checkout .summary-container {
-  border: 1px solid gray;
   display: flex;
-  flex-direction: column;
-  flex: 1;
 }
 
-.summary-container h2 {
-  margin-bottom: 20px;
-  font-size: 1.8rem;
-  font-family: "Oswald", sans-serif;
-}
 
-.summary-container h3 {
-}
 
 .summary-detail {
   display: flex;
